[project]
name = "crewai-28"
version = "0.28.8"
description = "AI Suppliers research system using CrewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "streamlit>=1.13.0",
    "pysqlite3-binary>=0.5.1",
    "pydantic>=2.4.2",
    "setuptools67.6.1",
    "langchain>=0.1.10",
    "openai>=1.13.3",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
    "instructor>=0.5.2",
    "regex>=2023.12.25",
    "crewai-tools[]>=0.1.7",
    "click>=8.1.7",
    "python-dotenv1.0.0",
    "embedchain>=0.1.98",
    "appdirs>=1.4.4",
    "python-decouple>=3.6",
    "crewai>=0.28.8",
]

[project.scripts]
crewai = "crewai.cli.cli:crewai"
run_crew = "crewai.main:run"

[project.optional-dependencies]
tools = [
    "crewai-tools",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
